[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "dobotexpress"
version = "0.0.1"
authors = [
  { name="Adityya Roy", email="royaditya02@outlook.com" },
]
description = "A compact library to control the Dobot Magician"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Environment :: Win32 (MS Windows)",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pyserial",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dobotexpress"]

[project.urls]
Homepage = "https://github.com/SmartDeve/TheDobotExpress"
Issues = "https://github.com/SmartDeve/TheDobotExpress/issues"